--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <div class="cont">
+    <div class="totalsalary subcont">
+        <h1>total salary of all employees is</h1>
+        <h2 class="salary"></h2>
+        <button id="btn">total salary</button>
+    </div>
     
+    <div class="detailsofemp subcont">
+        <h1>employees details</h1>
+    <div class="details"></div>
+    <button id="btn2">employee details</button>
+</div>
+
+<div class="countofdepartment subcont">
+    <h1>emp count as per department</h1>
+    <ul class="list"></ul>
+    <button id="btn3">department</button>
+</div>
+
+<div class="increamentsal subcont">
+    <h1>salary increament</h1>
+<button id="btn4">increamentsalary</button>
+</div>
+
+
+<div class="addemp subcont">
+    <h1>add employee</h1>
+    <button id="btn5">add emp</button>
+</div>
+</div>
+    <script src="index.js"></script>
 </body>
 </html>
